examples/test/testpolicy13325.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13325
  namespace: namespace286
spec:
  podSelector:
    matchLabels:
      key11: value34
      key32: value49
      key4: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value34
          key15: value23
          key28: value24
